--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,6 +14,14 @@
 	type = {Proyecto de fín de carrera},
 }
 
+@MastersThesis{AABS04,
+	author = {Alfredo Beaumont Sainz},
+	title = {Diseño e implementación de un sensor para el análisis de tráfico concurrente en redes de alta velocidad},
+	school = {Escuela Técnica Superior de Ingeniería de Bilbao},
+	year = {2004},
+	type = {Proyecto Fin de Carrera},
+}
+
 @article{AABS05,
 	author = {Alfredo Beaumont Sainz},
 	title = {Arquitectura de red para la automatización de pruebas},
@@ -36,13 +44,12 @@
 	year = {1996},
 }
 
-
-
 @Misc{DAVE10,
 	author = {David Miller},
 	title = {How GRO works},
-	howpublished = {Web article},
+	howpublished = {Web article in his kernel blog},
 	month = {08},
 	year = {2010},
 	note = {http://vger.kernel.org/~davem/cgi-bin/blog.cgi/2010/08/30},
 }
+
