He acabado el diseño de alto nivel, y lo he renombrado de carpeta

--- a/alto/cap-entorno-de-pruebas.tex
+++ b/alto/cap-entorno-de-pruebas.tex
@@ -68,3 +68,5 @@ Se ha diseñado de tal manera que el demonio al activar las estadísticas las rese
 
 \subsection{Traceador}
 En este caso, el gestor debe además de activar y desactivar el módulo, guardar todas las trazas de algún modo. Para ello se ha diseñado para que en vez de mandar la información a través de la salida estándar, se mande un fichero generado con el contenido, ya que por las características del módulo se sabe que la salida va a ser grande.
+
+Durante el desarrollo de la prueba, el demonio estará inactivo, y al finalizar, volcará en un fichero los datos y se los enviará a través del agente al gestor.
