He seguido con el diseño de bajo nivel, y veo que no he guardado desde hace un rato

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -53,3 +53,35 @@
 	note = {http://vger.kernel.org/~davem/cgi-bin/blog.cgi/2010/08/30},
 }
 
+@Book{OUTL00,
+	author = {Daniel P. Bovet, Marco Cesati},
+	title = {Understanding the Linux Kernel},
+	publisher = {O'Reilly Media},
+	year = {2000},
+	month = {Octubre},
+}
+
+@Book{OLDD09,
+	author = {Jonathan Corbet, Alessandro Rubini, Greg Kroah-Hartman},
+	title = {Linux Device Drivers},
+	publisher = {O'Reilly Media},
+	year = {2005},
+	edition = {3ra},
+	month = {Febrero},
+}
+
+@Book{OULN05,
+	author = {Christian Benvenuti},
+	title = {Understanding Linux Network Internals},
+	publisher = {O'Reilly Media},
+	year = {2005},
+	month = {Diciembre},
+}
+
+
+@Misc{RERI11,
+author = {Erik},
+title = {What does \_\_read\_mostly in the linux kernel do},
+howpublished = {Web blog},
+note = {http://www.lainoox.com/linux-kernel-\_\_read\_mostly/},
+}
